--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     "@docusaurus/core": "3.8.1",
     "@docusaurus/preset-classic": "3.8.1",
     "@mdx-js/react": "3.0.0",
-    "buffer": "^6.0.3",
+    "buffer": "6.0.3",
     "clsx": "2.0.0",
+    "docusaurus-plugin-sass": "0.2.6",
     "prism-react-renderer": "2.3.0",
-    "process": "^0.11.10",
+    "process": "0.11.10",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "stream-browserify": "^3.0.0",
-    "swagger-ui-react": "^5.27.1"
+    "sass": "1.89.2",
+    "stream-browserify": "3.0.0",
+    "swagger-ui-react": "5.27.1"
   },
-  "packageManager": "pnpm@10.14.0",
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.8.1",
     "@docusaurus/tsconfig": "3.8.1",
@@ -50,5 +51,6 @@
   },
   "engines": {
     "node": ">=18.0"
-  }
+  },
+  "packageManager": "pnpm@10.14.0"
 }
