Fix formatting in `vercel.json` by correcting the placement of the outputDirectory and framework properties for consistency.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "buildCommand": "pnpm build",
-  "outputDirectory": "build",
-  "framework": "docusaurus"
+  "framework": "docusaurus",
+  "outputDirectory": "build"
 }
-
