Update API documentation and improve task organization
- Changed API URL in `CLAUDE.md` and `CODEX.md` to point to the correct OpenAPI version.
- Revised task documentation in `README.md` to clarify context library references.
- Updated `TODO.md` to reflect recent tasks and priorities, including documentation of queue migration and database optimizations.
- Adjusted `SUMMARY.md` and `RULES.md` for consistency and accuracy.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,3 +4,7 @@ ignoredBuiltDependencies:
 
 onlyBuiltDependencies:
   - '@parcel/watcher'
+  - '@scarf/scarf'
+  - '@tree-sitter-grammars/tree-sitter-yaml'
+  - tree-sitter
+  - tree-sitter-json
