--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,20 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# IDE - VSCode
+.vscode/*
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.example
+# Note: .vscode/settings.json is personal, use .vscode/settings.json.example as template
+
+# IDE - Cursor
+.cursor/settings.json
+# Note: .cursor/commands/* are team-shared slash commands (committed)
+
+# IDE - Other
+.idea/
+*.swp
+*.swo
