--- a/package.json
+++ b/package.json
@@ -14,27 +14,31 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "format:check": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "prepare:deploy": "pnpm format:fix && pnpm typecheck && pnpm build"
   },
   "dependencies": {
-    "@docusaurus/core": "3.9.1",
-    "@docusaurus/preset-classic": "3.9.1",
+    "@docusaurus/core": "3.9.2",
+    "@docusaurus/preset-classic": "3.9.2",
     "@mdx-js/react": "3.1.1",
     "buffer": "6.0.3",
     "clsx": "2.1.1",
     "docusaurus-plugin-sass": "0.2.6",
     "prism-react-renderer": "2.4.1",
     "process": "0.11.10",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "sass": "1.93.2",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
+    "sass": "1.94.2",
     "stream-browserify": "3.0.0",
-    "swagger-ui-react": "5.29.4"
+    "swagger-ui-react": "5.30.3"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.9.1",
-    "@docusaurus/tsconfig": "3.9.1",
-    "@docusaurus/types": "3.9.1",
+    "@docusaurus/module-type-aliases": "3.9.2",
+    "@docusaurus/tsconfig": "3.9.2",
+    "@docusaurus/types": "3.9.2",
+    "prettier": "3.7.4",
     "typescript": "~5.9.3"
   },
   "browserslist": {
