Refactor project setup to use Bun as the package manager
- Replaced `pnpm` with `bun` in `package.json`, `README.md`, and various documentation files for consistency in installation and build commands.
- Removed `pnpm-lock.yaml` and `pnpm-workspace.yaml` as part of the transition to Bun.
- Updated deployment and development procedures in documentation to reflect the new setup.
- Ensured all references to commands and scripts are aligned with the new package manager.

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "pnpm build",
+  "buildCommand": "bun run build",
   "framework": "docusaurus",
   "outputDirectory": "build"
 }
