--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
-  "name": "docs.genfeed.ai",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "pre:install": "pnpm up --latest --recursive && pnpm i",
-    "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "start:dev": "docusaurus start --port 3000 --host local.genfeed.ai",
-    "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
-    "clear": "docusaurus clear",
-    "serve": "docusaurus serve",
-    "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc",
-    "format:check": "prettier --check .",
-    "format:fix": "prettier --write .",
-    "prepare:deploy": "pnpm format:fix && pnpm typecheck && pnpm build"
+  "browserslist": {
+    "development": [
+      "last 3 chrome version",
+      "last 3 firefox version",
+      "last 5 safari version"
+    ],
+    "production": [
+      ">0.5%",
+      "not dead",
+      "not op_mini all"
+    ]
   },
   "dependencies": {
     "@docusaurus/core": "3.9.2",
@@ -41,20 +33,29 @@
     "prettier": "3.7.4",
     "typescript": "~5.9.3"
   },
-  "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 3 chrome version",
-      "last 3 firefox version",
-      "last 5 safari version"
-    ]
-  },
   "engines": {
     "node": ">=18.0"
   },
-  "packageManager": "pnpm@10.14.0"
+  "name": "docs.genfeed.ai",
+  "packageManager": "bun@1.3.3",
+  "private": true,
+  "scripts": {
+    "build": "docusaurus build",
+    "cache:clear": "docusaurus clear && rm -rf node_modules .docusaurus build",
+    "clear": "docusaurus clear",
+    "deploy": "docusaurus deploy",
+    "docusaurus": "docusaurus",
+    "format:check": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "pre:install": "bun update --latest --recursive && bun install",
+    "prepare:deploy": "bun run format:fix && bun run typecheck && bun run build",
+    "serve": "docusaurus serve",
+    "start": "docusaurus start",
+    "start:dev": "docusaurus start --port 3000 --host local.genfeed.ai",
+    "swizzle": "docusaurus swizzle",
+    "typecheck": "tsc",
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "write-translations": "docusaurus write-translations"
+  },
+  "version": "0.0.0"
 }
