Refactor documentation structure and remove deprecated files
- Updated `.gitignore` to exclude IDE-specific settings and added `.next` directory.
- Revised `CLAUDE.md` to reflect the new documentation site structure and updated tech stack information.
- Deleted unused files including `docusaurus.config.ts`, `sidebars.ts`, and various documentation files to streamline the project.
- Enhanced `package.json` with updated scripts for development and deployment processes.
- Removed outdated configuration files and improved overall organization of the documentation site.

--- a/.gitignore
+++ b/.gitignore
@@ -27,11 +27,9 @@ yarn-error.log*
 !.vscode/*.example
 # Note: .vscode/settings.json is personal, use .vscode/settings.json.example as template
 
-# IDE - Cursor
-.cursor/settings.json
-# Note: .cursor/commands/* are team-shared slash commands (committed)
-
 # IDE - Other
 .idea/
 *.swp
 *.swo
+
+.next
