--- a/package.json
+++ b/package.json
@@ -1,61 +1,30 @@
 {
-  "browserslist": {
-    "development": [
-      "last 3 chrome version",
-      "last 3 firefox version",
-      "last 5 safari version"
-    ],
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ]
-  },
-  "dependencies": {
-    "@docusaurus/core": "3.9.2",
-    "@docusaurus/preset-classic": "3.9.2",
-    "@mdx-js/react": "3.1.1",
-    "buffer": "6.0.3",
-    "clsx": "2.1.1",
-    "docusaurus-plugin-sass": "0.2.6",
-    "prism-react-renderer": "2.4.1",
-    "process": "0.11.10",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
-    "sass": "1.94.2",
-    "stream-browserify": "3.0.0",
-    "swagger-ui-react": "5.30.3"
-  },
-  "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.9.2",
-    "@docusaurus/tsconfig": "3.9.2",
-    "@docusaurus/types": "3.9.2",
-    "prettier": "3.7.4",
-    "typescript": "~5.9.3"
-  },
-  "engines": {
-    "node": "22.x"
-  },
   "name": "docs.genfeed.ai",
-  "packageManager": "bun@1.3.3",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "docusaurus build",
-    "cache:clear": "docusaurus clear && rm -rf node_modules .docusaurus build",
-    "clear": "docusaurus clear",
-    "deploy": "docusaurus deploy",
-    "docusaurus": "docusaurus",
+    "dev": "next dev -p 3007",
+    "build": "next build",
+    "start": "next start -p 3007",
     "format:check": "prettier --check .",
-    "format:fix": "prettier --write .",
-    "pre:install": "bun update --latest --recursive && bun install",
-    "prepare:deploy": "bun run format:fix && bun run typecheck && bun run build",
-    "serve": "docusaurus serve",
-    "start": "docusaurus start",
-    "start:dev": "docusaurus start --port 3000 --host local.genfeed.ai",
-    "swizzle": "docusaurus swizzle",
-    "typecheck": "tsc",
-    "write-heading-ids": "docusaurus write-heading-ids",
-    "write-translations": "docusaurus write-translations"
+    "format:fix": "prettier --write ."
   },
-  "version": "0.0.0"
+  "dependencies": {
+    "next": "14.2.28",
+    "nextra": "^3.2.5",
+    "nextra-theme-docs": "^3.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "swagger-ui-react": "5.31.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.29",
+    "@types/react": "^18.3.23",
+    "prettier": "3.8.0",
+    "typescript": "~5.9.3"
+  },
+  "packageManager": "bun@1.3.3",
+  "engines": {
+    "node": "22.x"
+  }
 }
