--- a/package.json
+++ b/package.json
@@ -1,14 +1,4 @@
 {
-  "name": "docs.genfeed.ai",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -p 3007",
-    "build": "next build",
-    "start": "next start -p 3007",
-    "format:check": "prettier --check .",
-    "format:fix": "prettier --write ."
-  },
   "dependencies": {
     "next": "14.2.28",
     "nextra": "^3.2.5",
@@ -23,8 +13,18 @@
     "prettier": "3.8.0",
     "typescript": "~5.9.3"
   },
-  "packageManager": "bun@1.3.3",
   "engines": {
-    "node": "22.x"
-  }
+    "node": "24.x"
+  },
+  "name": "docs.genfeed.ai",
+  "packageManager": "bun@1.3.3",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev -p 3007",
+    "format:check": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "start": "next start -p 3007"
+  },
+  "version": "0.0.0"
 }
