--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
   "dependencies": {
-    "next": "14.2.28",
-    "nextra": "^3.2.5",
-    "nextra-theme-docs": "^3.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "16.1.3",
+    "nextra": "4.6.1",
+    "nextra-theme-docs": "4.6.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "swagger-ui-react": "5.31.0"
   },
   "devDependencies": {
-    "@types/node": "^22.15.29",
-    "@types/react": "^18.3.23",
+    "@types/node": "25.0.9",
+    "@types/react": "19.2.8",
     "prettier": "3.8.0",
-    "typescript": "~5.9.3"
+    "typescript": "5.9.3"
   },
   "engines": {
     "node": "24.x"
   },
   "name": "docs.genfeed.ai",
-  "packageManager": "bun@1.3.3",
+  "packageManager": "bun@1.3.6",
   "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev -p 3007",
     "format:check": "prettier --check .",
     "format:fix": "prettier --write .",
+    "pre:install": "bunx npm-check-updates -u && bun install",
     "start": "next start -p 3007"
   },
   "version": "0.0.0"
