--- a/biome.json
+++ b/biome.json
@@ -1,14 +1,5 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.3.10/schema.json",
-  "formatter": {
-    "enabled": true,
-    "indentStyle": "space",
-    "indentWidth": 2,
-    "lineWidth": 80
-  },
-  "linter": {
-    "enabled": false
-  },
   "assist": {
     "actions": {
       "source": {
@@ -16,5 +7,19 @@
         "useSortedKeys": "on"
       }
     }
+  },
+  "formatter": {
+    "enabled": true,
+    "indentStyle": "space",
+    "indentWidth": 2,
+    "lineWidth": 80
+  },
+  "javascript": {
+    "formatter": {
+      "quoteStyle": "single"
+    }
+  },
+  "linter": {
+    "enabled": false
   }
 }
